kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
spec:
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: homework
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
